--- a/index.html
+++ b/index.html
@@ -17,11 +17,29 @@
 	<a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
 </header>
 <main>
-	<div id="banner">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-		</div>
+	<div class="carousel">
+        <div class="carousel-images">
+          <img src="./assets/images/slideshow/slide1.jpg" alt="Image 1">
+          <img src="./assets/images/slideshow/slide2.jpg" alt="Image 2">
+          <img src="./assets/images/slideshow/slide3.jpg" alt="Image 3">
+          <img src="./assets/images/slideshow/slide4.png" alt="Image 4">
+        </div>
+        
+        <div class="carousel-navigation">
+          <div class="prev-arrow"><img src="./assets/images/arrow_left.png" alt="flèche précédente"></div>
+          <div class="bullet-points">
+            <div class="bullet"></div>
+            <div class="bullet"></div>
+            <div class="bullet"></div>
+            <div class="bullet"></div>
+          </div>
+          <div class="next-arrow"><img src="./assets/images/arrow_right.png" alt="flèche suivante"></div>
+        </div>
+        
+        <div class="carousel-text">
+          <p><span></span></p>
+        </div>
+      </div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
